--- a/Components/Pages/Bulletin.razor
+++ b/Components/Pages/Bulletin.razor
@@ -106,7 +106,7 @@ else
 @if (showManageModal)
 {
     <div class="modal fade show" tabindex="-1" style="display: block;" role="dialog">
-        <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-dialog modal-xl modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">公告管理</h5>
