--- a/Components/Pages/SecondSource.razor
+++ b/Components/Pages/SecondSource.razor
@@ -16,9 +16,9 @@
                 </span>
             </div>
             <div class="card-body py-2">
-                @* [修改] 搜尋欄位結構 *@
+                @* 搜尋欄位結構 *@
                 <div class="row mb-3 align-items-center">
-                    @* [修改] 搜尋框改為 8 欄寬 *@
+                    @* 搜尋框改為 8 欄寬 *@
                     <div class="col-md-8">
                         <div class="input-group">
                             <span class="input-group-text"><i class="bi bi-search"></i></span>
@@ -32,7 +32,7 @@
                             }
                         </div>
                     </div>
-                    @* [新增] 管理按鈕區塊 *@
+                    @* 管理按鈕區塊 *@
                     <div class="col-md-4">
                         <div class="d-flex justify-content-end align-items-center">
                             @if (IsAdmin)
