--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -20,6 +20,13 @@
                 <div class="update-item">
                     <span class="icon">✨</span>
                     <div class="update-content">
+                        <strong>Dashboard Enhancement:</strong> Start supporting PWR2_A32 projects.
+                    </div>
+                </div>
+                <h4>Version 0.0.38.0</h4>
+                <div class="update-item">
+                    <span class="icon">✨</span>
+                    <div class="update-content">
                         <strong>Dashboard Enhancement:</strong> Add Project Template Folder Button
                     </div>
                 </div>
